# sgcp-via-cliques

./: .gitignore  CITATION.cff  CMakeLists.txt  FindAS.cmake  FindExactcolors.cmake  FindPMC.cmake  FindPO.cmake  README.md
cluster/: cluster_launch.rb
generator/: generate-all.rb  generate-cmdline.rb  generate-from-vcp.rb  generate-hard-bp.rb  generate-sgcp.rb
generator/graphs/: g-100-0.1-0.25.txt  g-100-0.2-0.05.txt  g-100-0.2-0.15.txt  g-100-0.2-0.2.txt  g-100-0.2-0.25.txt  g-100-0.4-0.1.txt  g-100-0.4-0.15.txt  g-100-0.4-0.2.txt  g-100-0.5-0.05.txt  g-100-0.5-0.1.txt  g-100-0.5-0.3.txt  g-100-0.6-0.1.txt  g-100-0.6-0.15.txt  g-100-0.6-0.2.txt  g-100-0.6-0.25.txt  g-100-0.6-0.3.txt  g-100-0.7-0.05.txt  g-100-0.7-0.1.txt  g-100-0.7-0.15.txt  g-100-0.7-0.2.txt  g-100-0.7-0.25.txt  g-100-0.7-0.3.txt  g-100-0.8-0.05.txt  g-100-0.8-0.15.txt  g-100-0.8-0.2.txt  g-100-0.9-0.1.txt  g-100-0.9-0.15.txt  g-100-0.9-0.25.txt  g-150-0.1-0.15.txt  g-150-0.1-0.2.txt  g-150-0.1-0.3.txt  g-150-0.2-0.05.txt  g-150-0.2-0.1.txt  g-150-0.2-0.15.txt  g-150-0.2-0.2.txt  g-150-0.3-0.1.txt  g-150-0.3-0.15.txt  g-150-0.3-0.25.txt  g-150-0.4-0.05.txt  g-150-0.4-0.3.txt  (+63 more)
generator/graphs/10/: g-10-0.1-0.1.txt  g-10-0.1-0.25.txt  g-10-0.2-0.1.txt  g-10-0.2-0.15.txt  g-10-0.2-0.2.txt  g-10-0.3-0.1.txt  g-10-0.3-0.15.txt  g-10-0.3-0.25.txt  g-10-0.3-0.3.txt  g-10-0.4-0.1.txt  g-10-0.4-0.2.txt  g-10-0.4-0.25.txt  g-10-0.4-0.3.txt  g-10-0.5-0.1.txt  g-10-0.5-0.2.txt  g-10-0.5-0.25.txt  g-10-0.6-0.1.txt  g-10-0.6-0.15.txt  g-10-0.6-0.2.txt  g-10-0.7-0.15.txt  g-10-0.7-0.3.txt  g-10-0.8-0.15.txt  g-10-0.8-0.2.txt  g-10-0.8-0.25.txt  g-10-0.8-0.3.txt  g-10-0.9-0.1.txt  g-10-0.9-0.15.txt  g-10-0.9-0.2.txt  g-10-0.9-0.3.txt
src/: graph.cpp  graph.h  graph_weighted.cpp  graph_weighted.h  main.cpp
(+2011 files in other folders)
